# python-measurement

./: .bandit  .editorconfig  .gitignore  .hgtags  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.rst  changelog.rst  linter-requirements.txt  pyproject.toml  readme.markdown  readme.rst  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: Makefile  conf.py  custom_measures.rst  index.rst  measures.rst  requirements.txt  util.py
docs/topics/: creating_your_own_class.rst  installation.rst  measures.rst  use.rst
measurement/: __init__.py  base.py  utils.py
measurement/measures/: __init__.py  capacitance.py  current.py  distance.py  electromagnetism.py  energy.py  frequency.py  geometry.py  inductance.py  mass.py  mechanics.py  pressure.py  radiation.py  radioactivity.py  resistance.py  speed.py  temperature.py  time.py  voltage.py  volume.py  volumetric_flow.py  weight.py
tests/: base.py  test_base.py  test_distance.py  test_energy.py  test_pressure.py  test_radiation.py  test_speed.py  test_temperature.py  test_utils.py  test_volume.py
tests/measures/: test_all_units.py  test_electromagnetism.py  test_energy.py  test_geometry.py  test_speed.py  test_temperature.py  test_time.py
