[metadata]
name = measurement
author = Adam Coddington
author_email = me@adamcoddington.net
description = Easily use and manipulate unit-aware measurements in Python
long_description = file: README.rst
url = http://github.com/coddingtonbear/python-measurement
license = MIT
license_file = LICENSE
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Utilities
keywords =
    measurement

[options]
packages = find:
include_package_data = True
install_requires =
    sympy>=0.7.3
setup_requires =
    setuptools_scm
    sphinx
    pytest-runner
tests_require =
    pytest
    pytest-cov

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts =
    --cov=measurement
    --capture=no

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[pydocstyle]
add-ignore = D1

[isort]
atomic = true
line_length = 88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
known_first_party = measurement, tests
default_section=THIRDPARTY
combine_as_imports = true
